--- a/docs/文档.md
+++ b/docs/文档.md
@@ -81,11 +81,16 @@ GitHub: [https://github.com/typ1805/tansci](https://github.com/typ1805/tansci)
 ## 二、实现的功能
 
 1、基础模块：菜单管理、角色管理、组织管理、用户管理、字典管理、日志管理；
+
 2、消息通知：短信通知、邮件通知；
+
 3、定时任务：动态配置定时任务；
+
 4、支付功能：包含 支付宝、微信、银联等；
+
 5、三方登录：包含 短信、微信、QQ 等三方授权登录方式；
-6、持续更新...
+
+持续更新...
 
 ## 三、搭建环境
 
